--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>  
-    <header></header>
+    <header>
+        <img src="assets/img/logo.svg" alt="logo">
+        <div>
+            <h1>La próxima revolucion en el intercambio de criptomonedas</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
+            <a href="">Conoce nuestros planes <span><img src="assets/icons/down-arrow.svg" alt=""></span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
