--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>  
     <header>
         <img src="assets/img/logo.svg" alt="logo">
-        <div>
-            <h1>La próxima revolucion en el intercambio de criptomonedas</h1>
+        <div class="header__title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a href="">Conoce nuestros planes <span><img src="assets/icons/down-arrow.svg" alt=""></span></a>
+            <a class="header__button" href="">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
