--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
                         <p class=""><b>Actualizado:</b> 19 de Julio 23:45</p>
                     </div>    
                 </div>
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--grid">
+                        <div class="currency-table--item item-name"> <span>Bitrade</span> </div>
+                        <div class="currency-table--item item-name"> Bitpreco</div>
+                        <div class="currency-table--item item-name"> Novadax</div>
+                        <div class="currency-table--item item-name"> Coinext</div>
+                        <div class="currency-table--item item-price"> $12.96 </div>
+                        <div class="currency-table--item item-price"> $13.07 </div>
+                        <div class="currency-table--item item-price"> $13.15 </div>
+                        <div class="currency-table--item item-price"> $14.96 </div>
+                    </div>
+                </div>
             </section>
         </section>
         <section></section>
