build: comissions table finished

--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
                     </div>    
                 </div>
                 <div class="main-currency-table">
-                    <p class="currency-table--title">Monedas</p>
+                    <p class="currency-table--title currency-table--title__blue">Comisiones</p>
                     <div class="currency-table--grid">
-                        <div class="currency-table--item item-name"> <span>Bitrade</span> </div>
-                        <div class="currency-table--item item-name"> Bitpreco</div>
-                        <div class="currency-table--item item-name"> Novadax</div>
-                        <div class="currency-table--item item-name"> Coinext</div>
-                        <div class="currency-table--item item-price"> $12.96 </div>
+                        <div class="currency-table--item item-name table__top-left"> Bitrade </div>
+                        <div class="currency-table--item item-name"> Bitpreco </div>
+                        <div class="currency-table--item item-name"> Novadax </div>
+                        <div class="currency-table--item item-name table__bottom-left"> Coinext </div>
+                        <div class="currency-table--item item-price table__top-right"> $12.96 </div>
                         <div class="currency-table--item item-price"> $13.07 </div>
                         <div class="currency-table--item item-price"> $13.15 </div>
-                        <div class="currency-table--item item-price"> $14.96 </div>
+                        <div class="currency-table--item item-price table__bottom-right"> $14.96 </div>
                     </div>
+                    <div class="currency-table--date currency-table--date__blue">
+                        <p class=""><b>Actualizado:</b> 19 de Julio 23:45</p>
+                    </div>   
                 </div>
             </section>
         </section>
