--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a class="header__button" href="">Conoce nuestros planes <span></span></a>
+            <a class="header__button" href="#plans">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -104,7 +104,25 @@
         <section class="bitcoin-img-container">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <div class="plans-container--slider">
+                <article class="plans-container-card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p> 
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card-ca">
+                           Escoger este <span></span>
+                        </button>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
