style & build: silder and arrows put

--- a/index.html
+++ b/index.html
@@ -111,11 +111,35 @@
             </div>
             <div class="plans-container--slider">
                 <article class="plans-container-card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Trimestral</h3>
+                        <p class="plan-card--price"><span>$</span>49</p> 
+                        <p class="plan-card--saving">*Ahorras $81 comparado al plan mensual.</p>
+                        <button class="plan-card-ca">
+                           Escoger este <span></span>
+                        </button>
+                    </div>
+                </article>
+                <span class="secondary-right">  <img src="./assets/icons/right-arrow.svg" alt="right-arrow"></span>
+                <span class="principal-left"> <img src="./assets/icons/right-arrow.svg" alt="left-arrow"></span>
+                <article class="plans-container-card">
                     <p class="recommended">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Anual</h3>
                         <p class="plan-card--price"><span>$</span>99</p> 
                         <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card-ca">
+                           Escoger este <span></span>
+                        </button>
+                    </div>
+                </article>
+                <span class="principal-right"> <img src="./assets/icons/right-arrow.svg" alt="right-arrow"></span>
+                <span class="secondary-left"> <img src="./assets/icons/right-arrow.svg" alt="left-arrow"></span>
+                <article class="plans-container-card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>19</p> 
+                        <p class="plan-card--saving">*30 días de del mejor servicio de criptomonedas</p>
                         <button class="plan-card-ca">
                            Escoger este <span></span>
                         </button>
