build: footer added

--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="section-left">
+            <ul>
+                <li>
+                    <a href="#">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#">Crunchbase</a>
+                </li>
+                <li>
+                    <a href="#">Hackernews</a>
+                </li>
+            </ul>
+        </section>
+        <section class="section-right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2020">
+        </section>
+    </footer>
 </body>
 </html>
