feat: bigger tablet and laptop breakpoint added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 664px)">
+    <link rel="stylesheet" href="./css/tablet2.css" media="(min-width: 752px)">
+    <link rel="stylesheet" href="./css/laptop.css" media="(min-width: 840px)">
 </head>
 <body>  
     <header>
@@ -122,7 +124,7 @@
                         </button>
                     </div>
                 </article>  
-                <article class="plans-container-card">
+                <article class="plans-container-card trimestral-card">
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Trimestral</h3>
                         <p class="plan-card--price"><span>$</span>49</p> 
