--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta name="description" content="Landing page of Batatabit">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Batatabit</title>
+    <link rel="shortcut icon" href="assets/icons/batata.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 664px)">
-    <link rel="stylesheet" href="./css/tablet2.css" media="(min-width: 752px)">
     <link rel="stylesheet" href="./css/laptop.css" media="(min-width: 840px)">
 </head>
 <body>  
